created footer function, destination card functions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Cider Falls Park</title>
     <meta charset="UTF-8" />
-
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
